--- a/startbootstrap-clean-blog-gh-pages/css/main.css
+++ b/startbootstrap-clean-blog-gh-pages/css/main.css
@@ -3,9 +3,10 @@
     height: 100px;
     width:100%;
     padding-top: 30px;
-    color:white;
 }
-
+a {
+    color:rgb(166, 167, 218);
+}
 .title{
     font-size: 50px;
     color:red
@@ -40,15 +41,7 @@
     padding-bottom: 50px 
 }
 
-.mycontent{
-    display: flex;
-    flex-direction:row;
-    padding-left: 60px;
-    padding-right: 50px;
-    padding-top: 10px;
-    padding-bottom: 50px;
-    font-size:10px; 
-}
+
 
 .box{
     font-size: 20px;
@@ -58,3 +51,14 @@
     padding-top: 100px;
     padding-bottom: 50px; 
 }
+
+.mycontent{
+    padding-left: 60px;
+    padding-right: 50px;
+    padding-top: 10px;
+    padding-bottom: 50px;
+    font-size:15px; 
+}
+
+
+
